# r2d2-diesel

./: Cargo.toml
src/: lib.rs
tests/: test.rs
