[package]
name = "r2d2-diesel"
version = "0.16.0"
authors = ["Sean Griffin <sean@seantheprogrammer.com>"]
license = "MIT"
description = "r2d2 support for Diesel"
homepage = "https://github.com/sgrif/r2d2-diesel"
repository = "https://github.com/sgrif/r2d2-diesel"

[dependencies]
r2d2 = "0.7.3"
#diesel = { git = "https://github.com/king6cong/diesel", branch = "sdk", features = ["sqlite", "large-tables"] }
diesel = { path = "../diesel/diesel", features = ["sqlite", "large-tables"] }
